Fix invalid us/pw page and add CSRF token

--- a/app/views/auth/login.html
+++ b/app/views/auth/login.html
@@ -7,6 +7,8 @@
 		<fieldset>
 			<legend>Log in</legend>
 			
+			<inputname="token" type="hidden" value="{{ getToken() }}">
+			
 			<label for="username">Username</label>
 			<input id="username" name="username" type="text" placeholder="Username">
 			
