--- a/app/views/errors/nologinforyou.html
+++ b/app/views/errors/nologinforyou.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-<img src="/assets/images/nologinforyou.jpg">
-<h2>No login for you!</h2>
-<p>You have entered a wrong username or password.</p>
+<div class="pure-u-1">
+	<img src="/assets/images/nologinforyou.jpg">
+	<h2>No login for you!</h2>
+	<p>You have entered a wrong username or password.</p>
+</div>
 {% endblock %}
